[FIX][hugorodrigues_blog] Fixes navbar color on small screens

--- a/hugorodrigues_blog/static/src/less/navbar.less
+++ b/hugorodrigues_blog/static/src/less/navbar.less
@@ -14,7 +14,9 @@ div#wrapwrap.homepage {
             .navbar-nav {
                 li, li.active {
                     a {
-                        color: #666 !important;
+                        @media only screen and (min-width: 768px) {
+                            color: #666 !important;
+                        }
                     }
                 }
             }
@@ -32,7 +34,9 @@ div#wrapwrap {
         }
 
         .pg-on-top {
-            background-color: transparent !important;
+            @media only screen and (min-width: 768px) {
+                background-color: transparent !important;
+            }
         }
 
         .navbar-nav {
